// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Match snapshots ButtonUp active 1`] = `
<span
  className="button-up__UpStyled-sc-yq92rm-0 irGsTM"
>
  <span
    className="base-button__BaseButton-sc-1hqbwl-0 primary-button__PrimaryButton-sc-1gi77ac-0 dGmWiH bZuBBR button-icon__ButtonIconStyled-sc-i4ys4z-0 hCbfec"
    data-test="button-icon-up"
    size="m"
  >
    <button
      aria-label="To Top"
      className="___SButton_rkzvx_gg_ _size_m_rkzvx_gg_ _theme_primary-info_rkzvx_gg_ __active_rkzvx_gg_"
      data-ui-name="Button"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      size="m"
      style={Object {}}
      tabIndex={0}
      type="button"
    >
      <span
        className="___SInner_rkzvx_gg_"
        data-ui-name="Box"
        style={Object {}}
      >
        <span
          className="_size_m_rkzvx_gg_ ___SText_rkzvx_gg_"
          data-ui-name="Button.Text"
          size="m"
          style={Object {}}
        >
          svg-icon
        </span>
      </span>
    </button>
  </span>
</span>
`;

exports[`Match snapshots ButtonUp default 1`] = `
<span
  className="button-up__UpStyled-sc-yq92rm-0 irGsTM"
>
  <span
    className="base-button__BaseButton-sc-1hqbwl-0 secondary-button__SecondaryButton-sc-1lq79t2-0 dGmWiH PcQft button-icon__ButtonIconStyled-sc-i4ys4z-0 czAHmw"
    data-test="button-icon-up"
    size="m"
  >
    <button
      aria-label="To Top"
      className="___SButton_rkzvx_gg_ _size_m_rkzvx_gg_ _theme_secondary-muted_rkzvx_gg_"
      data-ui-name="Button"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      size="m"
      style={Object {}}
      tabIndex={0}
      type="button"
    >
      <span
        className="___SInner_rkzvx_gg_"
        data-ui-name="Box"
        style={Object {}}
      >
        <span
          className="_size_m_rkzvx_gg_ ___SText_rkzvx_gg_"
          data-ui-name="Button.Text"
          size="m"
          style={Object {}}
        >
          svg-icon
        </span>
      </span>
    </button>
  </span>
</span>
`;
